# ads-bridge-mcp

./: .dockerignore  .gitignore  Dockerfile  docker-compose.cloudflare.yml  pyproject.toml
.github/workflows/: docker-publish.yml
ads_bridge/: __init__.py  client.py  normalize.py  server.py
ads_bridge/tools/: __init__.py  _geo_constants.py  accounts.py  ad_performance.py  anomalies.py  breakdown.py  budget.py  campaigns.py  changelog.py  creative_analysis.py  daily_trends.py  demographics.py  devices.py  geo.py  optimization.py  pacing.py  performance.py  period_comparison.py  placements.py  summary.py
