[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ads-bridge-mcp"
version = "0.1.0"
description = "Cross-platform advertising bridge MCP server — unified analytics across Meta Ads and Google Ads"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
ads-bridge-mcp = "ads_bridge.server:main"

[tool.basedpyright]
typeCheckingMode = "off"
reportImportCycles = "none"
reportMissingImports = "none"
